# remotectrl

./: CMakeLists.txt  main.cpp
handler/: Handler.h  PingHandler.cpp  PingHandler.h
handler/jsonrpc2/: JsonRpc2Handler.cpp  JsonRpc2Handler.h  JsonRpc2RequestAbstract.cpp  JsonRpc2RequestAbstract.h  JsonRpc2ResponseAbstract.cpp  JsonRpc2ResponseAbstract.h
service/: TCPServer.cpp  TCPServer.h
service/transport/: Interface.h  Manager.cpp  Manager.h  Router.h
service/transport/http/: HTTPHeaders.h  HTTPObjects.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  HTTPTransport.cpp  HTTPTransport.h
